force-app/main/default/objects/Payment__c/fields/Charge_ID__c.field-meta.xml
<CustomField>
    <fullName>Charge_ID__c</fullName>
    <label>Charge ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>