force-app/main/default/objects/Payment__c/fields/CurrencyCode__c.field-meta.xml
<CustomField>
    <fullName>CurrencyCode__c</fullName>
    <label>CurrencyCode</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>