force-app/main/default/objects/Payment__c/fields/Payment_ID__c.field-meta.xml
<CustomField>
    <fullName>Payment_ID__c</fullName>
    <label>Payment ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>