force-app/main/default/objects/Payment__c/listViews/StripePayment.listView-meta.xml
<ListView>
    <fullName>StripePayment</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Amount__c</columns>
    <columns>Charge_ID__c</columns>
    <columns>CurrencyCode__c</columns>
    <columns>Payment_ID__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Mine</filterScope>
    <label>StripePayment</label>
</ListView>